fixed header alignment

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-.navbar{
+.header{
     height:125px;
     background-color:rgb(69, 74, 78);
     display: flex;
@@ -22,6 +22,7 @@
     color:rgb(240, 240, 240);
     font-size: 40px;
     margin-right:40px;
+    margin-top:20px;
     //font-weight:lighter;
 }
 
@@ -32,7 +33,7 @@
 .editprofile{
     color:rgb(240, 240, 240);
     font-size: 40px;
-    margin-top:5px;
+    margin-top:20px;
     position:relative;
     left:300px;
     //font-weight:lighter;
@@ -41,7 +42,7 @@
 .logout{
     color:rgb(240, 240, 240);
     font-size: 40px;
-    margin-top:5px;
+    margin-top:20px;
     position: relative;
     right:10px;
     }
@@ -126,7 +127,7 @@
 .vlprofile{
   border-left: 1px solid rgb(189, 189, 189);
   height: 80px;
-  margin-top:3px;
+  margin-top:20px;
   border-radius:5px;
   position: relative;
   left:144px;
